lab1/Test/L1-A-12-72.output
Error Type B at Line 13
Error Type A at Line 43
