lab1/Test/L1-A-12-72.cmm
int oTXOBdrbrWVPlmJvOQL ( struct {
  int KEjsWqhjIfl , maU9OEaF0jVI ;
  int a0A0LTH0I8oLwhXG = w4dfEiS = Q9TfpPSGKyMwQ_z2xu 
    < Qa + kcJ6Rm1n3 / - Mxg5m94ZyEDRGZhJzduQ [ zrTiPoRM 
    || tkgFY && Qx0pUk_GzVil_g6 <= wytVD6ZZtPek03K * ! 
    - fVtkIREFwH21sO8pSx ( vgcG7S2h5Xwy + ptR / - T [ 
    w9sQ_pVOvFf = PtW319fZgXBbi6aYsJ && z13lAMHZye2DIxw46 
    != f6J / ( gfkczQAMCKWu >= fFXOCR4RgBeW9u8qjc4l * 
    ( OjCOTcI = CNgohcwPhvw8c4xJgP8 = RUG8V53_ECsUIWrVwIsb 
    = RSBKWf5 || x3By0B8axgsEkNhk && HQG5LPy == ( zxg 
    [ zpJNhp || wQ5Woq4EoGmxw5s && vqAHxI9tY4mX359ZPvTa 
    == QSBGwjoR8s_r / ( FEYQYcfo9JWM_sA6jbK * - rAmNVTGIKpZ6TxV 
    ( XTcTA2c9KMu , O9hSjMFNEuMQu ) == ( Z3qPq + / CuzbZ8iGlCvU2tLXwnq8 
    && XYq_YWUbjC82x8e1 ) . uN / rFOseTM8NkD1M * IWu ) 
    . LlNm3 ] ) . njIoRS39Uh - ! BPF ) . h ) ] - ! ! 1182526959.1825335002 
    * ! Kul0kgrI . SBzaUc1aSqv4RkHL3 > 1930198648 ) ] 
    - - ! Jwq1o ( ) ;
}S6EzEMPWkXyifjK , int vCx34lMb4hiJ ) {
}
float ;
struct eThUFgQ4fRD0 Dnj [ 783221744 ] , wkb21wSDM9b5KUppVdq 

;
int ;
struct VN9OU7dj0UF {
}o 
;
int ;
int ;
int sho3dTxuGsyLiLb0k1B ( ) {
  U2pATK2LC2nBaf5m ;
  cdaOARKV ;
  if ( jW4xquc8m8mi1k_oHe5K )   r ;
else   if ( WYYsVs5j72GZ5cTX5aRK )   if ( ALoOqc4L2m0gnYY 
    ) {
  }else   while ( nNPIkFoWQg4Y )   tUARhbqBc ;




  return v7SuoRMKS ;
}
: